// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules/Content default 1`] = `
<div
  className=""
>
  <label
    className=""
  >
    Label
  </label>
  <div
    className=""
  >
    Content
  </div>
  <p
    className=""
  >
    Text
  </p>
</div>
`;

exports[`Storyshots Molecules/Content props children is Text 1`] = `
.c0 {
  display: block;
  margin: 0;
  padding: 0;
  border: solid 1px #d9d9d9;
  border-radius: 4px;
  font-size: 20px;
  color: $gray;
  line-height: 1em;
  width: 100%;
}

<div
  className=""
>
  <label
    className=""
  >
    Label
  </label>
  <div
    className=""
  >
    <input
      className="c0"
      type="text"
    />
  </div>
  <p
    className=""
  >
    Text
  </p>
</div>
`;
